v1.4.1 - February 2, 2008
	+ Remove queue support (it was removed from mpd-svn, complain to them)
	+ Add album info back
	+ Use hand2 instead of hand1 for song info links
	+ Bug: Traceback can occur after enabling audioscrobbler
	+ Bug: Text background color on tabs (ecik)
	+ Bug: Can't click (more) link in non-English locales
	+ Bug: Crash when using libegg with system tray icon disabled
	+ Bug: Disable tag editing link in info tab for streams/remote files
	+ Bug: Unescape common html codes from lyrics fetching, enable formatting

v1.4 - January 15, 2008
	+ Integrate info window into main player
	+ Update to audioscrobbler protocol 1.2 and scrobbling bug fixes (mveers)
	+ Implemented caching of scrobbles across client restarts
	+ Vertically center currently playing song
	+ Updated artwork (Adrian Chromenko)
	+ IPv6 support for the mpd connection (Shane Kerr)
	+ Allow screen center for notification popup
	+ Preference for saving lyrics to music file's directory (like artwork)
	+ Allow hiding and reordering notebook tabs (e.g. playlists, streams, info)
	+ Retain library path when re-opening Sonata
	+ Remove confusing 'remote only' and 'remote, then local' artwork options
	+ Ability to hide progress bar (can create very minimal player)
	+ Skip fallback artwork search of just album name if primary searches fail
	+ Make system tray icon scalable
	+ Shortcuts to search library (ctrl-h), randomize current playlist (alt-r)
	+ Use gtk theme's link-color if available (only for gtk 2.12 and above)
	+ Bug: Right-click menu can cause accidental actions with some gtk themes
	+ Bug: Prevent crash on negative disc/track numbers
	+ Bug: Filter + Edit Tags edits a different song than selected
	+ Bug: Prevent possible exception regarding cover art on first load
	+ Bug: Fix retrieving some non-English lyrics (ecik)
	+ Bug: Allow MPD_HOST to override GUI
	+ Bug: {} displays in the Current column title
	+ Bug: Fix manpage path to be FHS compliant